updated HMM vignette

--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -118,5 +118,11 @@
 	publisher    = {Cambridge Univ. Press},
 	year         = {2009}
 }
-
+@book{zucchini2016,
+  title={Hidden {Markov Models} for {Time Series}: {An Introduction} {U}sing {R}},
+  author={Zucchini, Walter and MacDonald, Iain L and Langrock, Roland},
+  year={2016},
+  publisher={Chapman \& Hall/CRC},
+  address={Boca Raton}
+}
 
